--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<h1>There is only one king</h1>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <div class="container-fluid">
+    <a href="#default" class="logo">Kitchen Story</a>
+    <div class="header-right">
+      <a class="active" href="#home">Home</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+    </div>
+</nav><br><br>
+<app-products-list></app-products-list>
+  
+      
+  
