--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -5,7 +5,7 @@
           <div class="card-body">
             <h4 class="card-title">Mexican Pizza</h4>
             <p class="card-text">Ingredients: Pepperoni, Olives and Onions</p>
-            <a href="#" class="btn btn-primary">Purchase</a>
+            <a href="#" class="btn btn-primary">Add to Cart</a>
           </div>
         </div>
     </div>
