Added angular routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-products-list></app-products-list>
+<app-login-page></app-login-page>
 <app-footer></app-footer>
   
       
