--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,10 @@
-<div class="header-right">
-    
-  </div>
-
-  <footer class="footer">
+<footer class="footer">
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center p-3" style="background-color: #e3f2fd;">
       © 2022 Copyright:
         <button class="btn btn-outline-success" type="submit">Contact</button>
         <button class="btn btn-outline-success" type="submit">About</button>
         <button class="btn btn-outline-success" type="submit">FAQ</button>
     </div>
     <!-- Copyright -->
-  </footer>
+</footer>
