welcome page & customer/admin auth component

--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -4,10 +4,10 @@
         <div class="col-6 col-md-8 col-lg-6 col-xl-5">
           <div class="card shadow-2-strong" style="border-radius: 1rem;">
             <div class="card-body p-5 text-center">
-                <h3 class="mb-5">Sign in</h3>
+                <h3 class="mb-5">Administrator Sign in</h3>
 
                     <div class="form-outline mb-4">
-                        <form id="login-form" class="form" [formGroup]="loginForm" (ngSubmit)="login()">
+                        <form id="login-form" class="form">
                     
                                 <label for="username" class="form-label">Username: </label>
                                 <input formControlName="username" type="text" class="form-control" id="username">
@@ -20,6 +20,3 @@
             </form>
         </div>
     </div>
-
-
-
