--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<app-login-page></app-login-page>
-<app-footer></app-footer>
+<app-footer></app-footer><br>
+<router-outlet></router-outlet>
   
       
   
