--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4ba0dd;">
     <div class="container-fluid">
-    <a href="#default" class="navbar-brand">Kitchen Story</a>
-    <div class="header-right">
-      <button class="btn btn-outline-success" type="submit">Admin Login</button>
+      <a class="navbar-brand" href="#">Kitchen Story</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/customerlogin">Customer Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/adminlogin">Admin Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    </div>
-</nav><br><br>
+  </nav>
