--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,68 +1,29 @@
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
+body {
+  font-family: "Lato", sans-serif;
+  background-image: url("https://images.unsplash.com/photo-1551218808-94e220e084d2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Y29va2luZ3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
 
-.div {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
+}
+.main-head{
+  height: auto;
+  background: #FFF;
+  align-content: center;
+ 
 }
 
-input[type=text], input[type=password] {
-  width: 50%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+.main {
+  text-align: flex;
 }
 
-button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 50%;
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
 }
 
-button:hover {
-  opacity: 0.8;
-}
-
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-}
-
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
-.container {
-  padding: 16px;
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
+@media screen and (max-width: 450px) {
+  .login-form{
+      margin-top: 10%;
   }
-  .cancelbtn {
-     width: 100%;
+
+  .register-form{
+      margin-top: 10%;
   }
 }
