--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,13 +1,73 @@
 <body>
-    <div class="container">
+  <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
         <div class="card" style="width:400px">
           <img class="card-img-top" src="https://images.unsplash.com/photo-1604382354936-07c5d9983bd3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8NXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="Card image" style="width:100%">
           <div class="card-body">
             <h4 class="card-title">Mexican Pizza</h4>
             <p class="card-text">Ingredients: Pepperoni, Olives and Onions</p>
-            <a href="#" class="btn btn-primary">Add to Cart</a>
+            <a routerLink="/cart" class="btn btn-primary">Add to Cart</a>
           </div>
         </div>
+      </div>
+    
+
+    <div class="col-sm-4">
+      <div class="card" style="width:400px">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1572802419224-296b0aeee0d9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2hlZXNlYnVyZ2VyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Cheese Burger</h4>
+          <p class="card-text">Ingredients: Parmesan Cheese, Roasted potato patty, Lettuce & Onions</p>
+          <a routerLink="/cart" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
     </div>
+
+    <div class="col-sm-4">
+      <div class="card" style="width:400px">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1617622141573-2e00d8818f3f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c2NoZXp3YW4lMjBub29kbGVzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Schezwan Noodles</h4>
+          <p class="card-text">Ingredients: Schezwan sauce, Peas, Beans, Cabbage, Noodles & Spring Onions</p>
+          <a routerLink="/cart" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="card" style="width:400px">
+        <img class="card-img-top" src="https://t4.ftcdn.net/jpg/02/13/13/13/240_F_213131312_BrUO9OKiVdLrWwkew2YSOT7UHKT0vedx.jpg" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Gobi Manchuri</h4>
+          <p class="card-text">Ingredients: Cauliflower, Corn Flour, Soya Sauce, Vinegar, Chilli Sauce & Garlic</p>
+          <a routerLink="/cart" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="card" style="width:400px">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1528736235302-52922df5c122?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2hlZXNlJTIwc2FuZHdpY2h8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Cheese Sandwhich</h4>
+          <p class="card-text">Ingredients: Bread, Butter, Cheddar Cheese, Italian Seasoning & Hot Sauce</p>
+          <a routerLink="/cart" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="card" style="width:400px">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1605262157780-8910063b2bf9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGZyaWVzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Peri Peri Fries</h4>
+          <p class="card-text">Ingredients: Potato, Italian Peri Peri Seasoning & Olive Oil</p>
+          <a routerLink="/cart" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+</div>
+</div>
 </body>
 
