--- a/src/app/welcomepage/welcomepage.component.css
+++ b/src/app/welcomepage/welcomepage.component.css
@@ -4,7 +4,7 @@ body {
 }
 
 .hero-image {
-  background-image: url("https://images.unsplash.com/photo-1540420828642-fca2c5c18abe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fGNvb2tpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+  background-image: url("https://images.pexels.com/photos/2284166/pexels-photo-2284166.jpeg?auto=compress&cs=tinysrgb&w=1600");
   background-color: #cccccc;
   height: 700px;
   background-position: center;
