--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,5 +17,11 @@
           </li>
         </ul>
       </div>
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Search products">
     </div>
+    <span class="fas fa-search search-icon"></span>
+    </div>   
   </nav>
+
+  
