--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -7,7 +7,7 @@
             <h4 class="card-title">{{product.productname}}</h4>
             <p class="card-text">{{product.ingredients}}</p>
             <p class="card-text"><strong>Rs: {{product.price}}</strong></p>
-            <button class="btn btn-primary">Add to Cart</button>
+            <button class="btn btn-primary" (click)=addtoCart(product)>Add to Cart</button>
           </div>
         </div>
     </ng-container>
