--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,60 @@
-<p>cart works!</p>
+.<ng-container *ngIf="product.length !=0">
+    <div class="container">
+        <div class="card-table">
+            <div class="cart-product">
+                <table class="table table-responsive">
+                    <thead>
+                        <tr>
+                            <th>Sr. No</th>
+                            <th>Product Name</th>
+                            <th>Product Image</th>
+                            <th>Description</th>
+                            <th>Price</th>
+                            <th>Quantity</th>
+                            <th>Total</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let product of product; let i = index">
+                            <td>{{i+1}}</td>
+                            <td>{{product.productname}}</td>
+                            <td><img style="width: 120px;" src="{{product.image}}"></td>
+                            <td style="width: 25%;">{{product.ingredients}}</td>
+                            <td style="width: 12%;">{{product.price}}</td>
+                            <td style="width: 12%;">{{product.quantity}}</td>
+                            <td style="width: 12%;">{{product.total}}</td>
+                            <td>
+                                <button (click)="removeItem(product)" class="btn btn-danger">Delete product</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="4"></td>
+                            <td><button (click)="emptyCart()" class="btn btn-danger">Empty the Cart</button></td>            
+                            <td><button routerLink="/products" class="btn btn-primary">Back to products</button></td>
+                            <td><button class="btn btn-success">Checkout</button></td>
+                            <td><strong>Grand Total: Rs {{grandTotal}}</strong></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</ng-container>
+
+
+
+<ng-container *ngIf="product.length==0">
+    <div class="container">
+        <div class="card">
+            <h5>My Cart</h5>
+        </div>
+    
+        <div class="center">
+            <img src="https://www.shutterstock.com/image-vector/selfservice-supermarket-full-shopping-trolley-260nw-374614351.jpg">
+            <h4>Your cart is empty</h4>
+            <button routerLink="/products" class="btn btn-primary">Shop now</button>
+        </div>
+    </div>
+</ng-container>
+
