--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <ng-container *ngFor="let product of productList">
+    <ng-container *ngFor="let product of productList | filter:searchKey:'productname'">
       <div class="card col-sm-4" style="width:400px">
         <img class="card-img-top" style="width:100%" src="{{product.image}}">
           <div class="card-body">
