Checkout page and confirmation page

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -32,7 +32,7 @@
                             <td colspan="4"></td>
                             <td><button (click)="emptyCart()" class="btn btn-danger">Empty the Cart</button></td>            
                             <td><button routerLink="/products" class="btn btn-primary">Back to products</button></td>
-                            <td><button class="btn btn-success">Checkout</button></td>
+                            <td><button class="btn btn-success" routerLink="/checkout">Checkout</button></td>
                             <td><strong>Grand Total: Rs {{grandTotal}}</strong></td>
                         </tr>
                     </tbody>
