--- a/src/app/admin-options/admin-options.component.css
+++ b/src/app/admin-options/admin-options.component.css
@@ -8,3 +8,24 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+body {
+    background-color: #f5f7fa;
+  }
+  
+.blockquote-custom {
+    position: relative;
+    font-size: 1.1rem;
+}
+  
+.blockquote-custom-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -40px;
+    left: 19px;
+}
