--- a/src/app/admin-options/admin-options.component.html
+++ b/src/app/admin-options/admin-options.component.html
@@ -1,8 +1,38 @@
-<div class="container h-100 d-flex justify-content-center">
-    <div class="card" style="width:400px">
-        <a class='btn btn-primary' routerLink="/admindashboard">Change current password</a><br>
-        <a class='btn btn-primary' routerLink="/manageproduct">Manage Products</a>
-    </div>
-</div>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+    <a href="#" class="navbar-brand">Admin Options</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navcontent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navcontent">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a routerLink="/adminoptions" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" class="nav-link">Admin Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/insert" class="nav-link" routerLinkActive="active">Insert Product</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/display" class="nav-link" routerLinkActive="active">Display all Products</a>
+            </li>
+        </ul>
+    </div>    
+</nav>
+<div class="container">
+    <section class="mx-auto my-5" style="max-width: 23rem;">
+      
+      <div class="card">
+        <div class="card-body">
+          <blockquote class="blockquote blockquote-custom bg-white px-3 pt-4">
+            <div class="blockquote-custom-icon bg-info shadow-1-strong">
+              <i class="fa fa-quote-left text-white"></i>
+            </div>
+            <p class="mb-0 mt-2 font-italic">
+              Please choose admin options from the navbar
+            </p>
+          </blockquote>
+        </div>
+      </div>
+    </section>
+  </div>
 
 
