Minor updates and code cleanup

--- a/src/app/admin-options/admin-options.component.html
+++ b/src/app/admin-options/admin-options.component.html
@@ -26,6 +26,8 @@
             <div class="blockquote-custom-icon bg-info shadow-1-strong">
               <i class="fa fa-quote-left text-white"></i>
             </div>
+            <img class="card-img-top" style="width:100%" src="https://img.icons8.com/nolan/2x/admin-settings-male.png">
+            <h3 class="mb-0 mt-2 font-italic">Welcome to the Admin Dashboard</h3>
             <p class="mb-0 mt-2 font-italic">
               Please choose admin options from the navbar
             </p>
